# rust-toy-api

./: Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: main.rs
src/application/: convert_service.rs  disks_service.rs  memory_service.rs  metrics_service.rs  mod.rs
src/application/usecases/: convert_service.rs  metrics_service.rs  mod.rs  resolver_service.rs  udp_proxy_service.rs
src/interface/controllers/: convert_controller.rs  metrics_controller.rs  mod.rs
src/models/: metrics.rs
src/presentation/: convert_handler.rs  dice_handler.rs  healthcheck_handler.rs  metrics_handler.rs  mod.rs
src/presentation/handlers/: convert_handler.rs  generic_handler.rs  metrics_handler.rs  mod.rs  sleep_handler.rs
