[package]
name = "rust-toy-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
axum-extra = "0.10.0"
bcrypt = "0.16.0"
chrono = "0.4.39"
clippy = { version = "0.0.302", optional = true }
dotenvx = "0.*"
headers = "0.4.0"
hyper = { version = "1.5.2", features = ["full"] }
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sysinfo = "0.33.1"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.11.1", features = ["serde", "v4"] }
anyhow = "1.0"
